<resources>
    <string name="app_name">Desamparados</string>
    <string name="CrearAviso">Publicacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Avisos</string>
    <string name="menu_gallery">Tiendas</string>
    <string name="menu_slideshow">Mis Favoritos</string>
    <string name="menu_avisos">Mis Publicaciones</string>

    <string name="home_second">Home Second</string>

    <!--NOMBRES EN EL ACTIVITY AVISOS-->
    <string name="Guardar">Guardar</string>
    <string name="DatosMascota">Datos de la Mascota</string>
    <string name="NombreMascota">Nombre o apodo</string>
    <string name="sector">Sector</string>
    <string name="location">Dirrección apromaximada</string>


    <!--NOMBRES DE LIST_AVISOS-->

    <string name="Nombre">Nombre</string>
    <string name="Descripción">Descripción</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="todo" />

    <!-- Nombre de lista de tiendas-->
    <string name="nombre_tienda">nombre de una tienda</string>
    <string name="descripcion_img">Descripción de una imagen.</string>
    <string name="descripcion_tienda">Descripción de una tienda.</string>
    <string name="title_activity_maps">Map</string>


    <!-- latitude and logitud description at top screen -->
    <string name="detail_lat_lon">(%1$,2f ,%2$,2f)</string>
    <string name="title_activity_map2">Map</string>
    <string name="title_activity_map3">Map</string>

    <!-- Nombres de Inicio de sesion -->
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciarSesion">Inicar Sesion</string>
    <string name="registrar">Registrar</string>
    <!-- Nombres de registro -->
    <string name="usuario">Nombre</string>
    <string name="Telefono">Celular</string>
    <string name="contraseña2">Repetir contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
